--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "@prisma/client": "^5.1.1",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
-    "@types/node": "^20.4.2",
+    "@types/node": "^20.5.1",
     "bcryptjs": "^2.4.3",
     "color": "^4.2.3",
     "colors": "^1.4.0",
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
+    "prisma": "^5.1.1",
     "query-string": "^8.1.0",
     "ts-node": "^10.9.1"
   }
